--- a/schedule.html
+++ b/schedule.html
@@ -97,21 +97,21 @@
           <thead>
             <tr>
               <th>Event</th>
-              <th>Result</th>
+              <th>Date</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>Penn (Home)</td>
-              <td></td>
+              <td>10/14</td>
             </tr>
             <tr>
               <td>Delaware</td>
-              <td></td>
+              <td>11/10</td>
             </tr>
 	    <tr>
               <td>Binghamton</td>
-              <td></td>
+              <td>12/1</td>
             </tr>
           </tbody>
         </table>
