--- a/team.html
+++ b/team.html
@@ -113,7 +113,7 @@
               <p>Name: Esther Huang</p>
               <p>Year: Junior</p>
 	      <p>School: Wharton</p>
-              <p>Position: ?</p>
+              <p>Position: DS</p>
               <p>Height: 5'3"</p>
               <p>Hometown: Philadelphia, PA</p>
             </td>
@@ -225,7 +225,7 @@
               <p>Name: Emmilee Brown</p>
               <p>Year: Sophmore</p>
 	      <p>School: SAS</p>
-              <p>Position: ?</p>
+              <p>Position: RS</p>
               <p>Height: 5'9"</p>
               <p>Hometown: Newport Beach, CA</p>
             </td>
@@ -239,7 +239,7 @@
               <p>Name: Ainsley Campbell</p>
               <p>Year: Freshmam</p>
 	      <p>School: Wharton</p>
-              <p>Position: ?</p>
+              <p>Position: MB</p>
               <p>Height: 5'10"</p>
               <p>Hometown: Frisco, TX</p>
             </td>
@@ -253,7 +253,7 @@
               <p>Name: Lexi Malakhoff</p>
               <p>Year: Freshman</p>
 	      <p>School: SAS</p>
-              <p>Position: ?</p>
+              <p>Position: S</p>
               <p>Height: 5'7"</p>
               <p>Hometown: Barnstable, MA</p>
             </td>
@@ -267,7 +267,7 @@
               <p>Name: Mimi Rajapaksa</p>
               <p>Year: Freshman</p>
 	      <p>School: SEAS</p>
-              <p>Position: ?</p>
+              <p>Position: DS/L</p>
               <p>Height: 5'1"</p>
               <p>Hometown: The Woodlands, TX</p>
             </td>
@@ -281,7 +281,7 @@
               <p>Name: Sydney Williams</p>
               <p>Year: Freshman</p>
 	      <p>School: Wharton</p>
-              <p>Position: ?</p>
+              <p>Position: OH</p>
               <p>Height: 5'8"</p>
               <p>Hometown: Orlando, Fl</p>
             </td>
